<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ControlBtActivity" >

    <TextView
        android:id="@+id/textView1bt_control_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/free"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1bt_control_activity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1bt_control_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="command_capture"
        android:text="@string/capture_eeg" />

    <Button
        android:id="@+id/button4bt_control_activity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2bt_control_activity"
        android:layout_alignRight="@+id/button2bt_control_activity"
        android:layout_below="@+id/button2bt_control_activity"
        android:layout_marginTop="38dp"
        android:onClick="command_save"
        android:text="@string/send_data" />

    <Button
        android:id="@+id/button2bt_control_activity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1bt_control_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:onClick="command_cancel"
        android:text="@string/cancel_eeg" />

    <Button
        android:id="@+id/button3bt_control_activity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:onClick="return_to_first_activity"
        android:text="@string/go_out" />

</RelativeLayout>
