<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NeuroActivity" >

    <Button
        android:id="@+id/button2neuro_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:onClick="capture_data"
        android:text="@string/capture_data" />

    <Button
        android:id="@+id/button1neuro_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2neuro_activity"
        android:layout_alignLeft="@+id/button2neuro_activity"
        android:layout_marginBottom="20dp"
        android:onClick="search_file"
        android:text="@string/search_file" />

    <TextView
        android:id="@+id/textView1neuro_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/name_file" />

    <TextView
        android:id="@+id/textView2neuro_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1neuro_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/no_file_upload" />

</RelativeLayout>